# cores

./: .gitignore  CMakeLists.txt  Jenkinsfile
cmake/: verilator_sim.cmake  yosys_formal.cmake
formal/: CMakeLists.txt  uart_formal.sby
hdl/: m_axis_assertions.sv  uart.sv
sim/: CMakeLists.txt  axis_master_agent.hpp  testbench.hpp  uart_agent.hpp  uart_sim.cpp
